old propire project about page added

--- a/cma-usa.html
+++ b/cma-usa.html
@@ -200,7 +200,7 @@
                 </li>
               </ul>
             </div> -->
-            <a href="about-1.html" class="nav-item nav-link">About Us </a>
+            <a href="about.html" class="nav-item nav-link">About Us </a>
             <a href="404.html" class="nav-item nav-link">FAQ Page</a>
             <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
@@ -525,7 +525,7 @@
                 </div>
               </div>
             </div>
-            <div class="container py-5">
+            <div class="py-5">
               <div
                 class="text-center position-relative mx-auto"
                 style="max-width: 600px"
@@ -535,86 +535,154 @@
                 </h5>
                 <!-- <h1 class="mb-0">Default Navs and tabs</h1> -->
               </div>
-              <div class="border rounded p-4">
+              <div
+                class="border rounded p-4 wow fadeInUp"
+                data-wow-delay="0.6s"
+              >
                 <nav>
-                  <div
-                    class="nav nav-tabs justify-content-center mb-3"
-                    id="nav-tab"
-                    role="tablist"
-                  >
+                  <div class="nav nav-tabs mb-3" id="nav-tab" role="tablist">
                     <button
-                      class="nav-link active"
-                      id="nav-home-tab"
+                      class="nav-link text-uppercase active"
+                      id="nav-story-tab"
                       data-bs-toggle="tab"
-                      data-bs-target="#nav-home"
+                      data-bs-target="#nav-story"
                       type="button"
                       role="tab"
-                      aria-controls="nav-home"
+                      aria-controls="nav-story"
                       aria-selected="true"
                     >
-                      Examination
+                    Exams
                     </button>
                     <button
-                      class="nav-link"
-                      id="nav-profile-tab"
+                      class="nav-link text-uppercase"
+                      id="nav-mission-tab"
                       data-bs-toggle="tab"
-                      data-bs-target="#nav-profile"
+                      data-bs-target="#nav-mission"
                       type="button"
                       role="tab"
-                      aria-controls="nav-profile"
+                      aria-controls="nav-mission"
                       aria-selected="false"
                     >
-                      Education
+                    Learning
                     </button>
                     <button
-                      class="nav-link"
-                      id="nav-contact-tab"
+                      class="nav-link text-uppercase"
+                      id="nav-vision-tab"
                       data-bs-toggle="tab"
-                      data-bs-target="#nav-contact"
+                      data-bs-target="#nav-vision"
                       type="button"
                       role="tab"
-                      aria-controls="nav-contact"
+                      aria-controls="nav-vision"
                       aria-selected="false"
                     >
-                      Experience
+                    Expertise
                     </button>
                   </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                   <div
                     class="tab-pane fade show active"
-                    id="nav-home"
+                    id="nav-story"
                     role="tabpanel"
-                    aria-labelledby="nav-home-tab"
+                    aria-labelledby="nav-story-tab"
                   >
-                    The CMA exam comprises two parts, each with 100
-                    multiple-choice questions and two essays. A 360/500 score on
-                    each part is needed to pass, with a 50% minimum on MCQs.
-                    Thorough preparation and review courses are crucial for
-                    success.
+                    <p>
+                      The CMA exam comprises two parts, each with 100
+                      multiple-choice questions and two essays. A 360/500 score
+                      on each part is needed to pass, with a 50% minimum on
+                      MCQs. Thorough preparation and review courses are crucial
+                      for success.
+                    </p>
+                    <!-- <div class="row g-3">
+                      <div class="col-sm-6">
+                        <h5 class="mb-3">
+                          <i class="fa fa-check text-primary me-3"></i>Award
+                          Winning
+                        </h5>
+                        <h5 class="mb-0">
+                          <i class="fa fa-check text-primary me-3"></i
+                          >Professional Staff
+                        </h5>
+                      </div>
+                      <div class="col-sm-6">
+                        <h5 class="mb-3">
+                          <i class="fa fa-check text-primary me-3"></i>24/7
+                          Support
+                        </h5>
+                        <h5 class="mb-0">
+                          <i class="fa fa-check text-primary me-3"></i>Fair Prices
+                        </h5>
+                      </div>
+                    </div> -->
                   </div>
                   <div
                     class="tab-pane fade"
-                    id="nav-profile"
+                    id="nav-mission"
                     role="tabpanel"
-                    aria-labelledby="nav-profile-tab"
+                    aria-labelledby="nav-mission-tab"
                   >
-                    Candidates should hold at least a Bachelor's degree. The
-                    education requirement can be completed before or within
-                    seven years of passing the exam. This means that students
-                    who are pursuing their bachelor's degree are eligible to
-                    take the CMA exam.
+                    <p>
+                      Candidates should hold at least a Bachelor's degree. The
+                      education requirement can be completed before or within
+                      seven years of passing the exam. This means that students
+                      who are pursuing their bachelor's degree are eligible to
+                      take the CMA exam.
+                    </p>
+                    <!-- <div class="row g-3">
+                      <div class="col-sm-6">
+                        <h5 class="mb-3">
+                          <i class="fa fa-check text-primary me-3"></i>Award
+                          Winning
+                        </h5>
+                        <h5 class="mb-0">
+                          <i class="fa fa-check text-primary me-3"></i
+                          >Professional Staff
+                        </h5>
+                      </div>
+                      <div class="col-sm-6">
+                        <h5 class="mb-3">
+                          <i class="fa fa-check text-primary me-3"></i>24/7
+                          Support
+                        </h5>
+                        <h5 class="mb-0">
+                          <i class="fa fa-check text-primary me-3"></i>Fair Prices
+                        </h5>
+                      </div>
+                    </div> -->
                   </div>
                   <div
                     class="tab-pane fade"
-                    id="nav-contact"
+                    id="nav-vision"
                     role="tabpanel"
-                    aria-labelledby="nav-contact-tab"
+                    aria-labelledby="nav-vision-tab"
                   >
-                    Candidates need to have at least two years of professional
-                    experience in the field of accounting or finance. The
-                    experience requirement can be completed either before or
-                    within seven years of passing the examination.
+                    <p>
+                      Candidates need to have at least two years of professional
+                      experience in the field of accounting or finance. The
+                      experience requirement can be completed either before or
+                      within seven years of passing the examination
+                    </p>
+                    <!-- <div class="row g-3">
+                      <div class="col-sm-6">
+                        <h5 class="mb-3">
+                          <i class="fa fa-check text-primary me-3"></i>Award
+                          Winning
+                        </h5>
+                        <h5 class="mb-0">
+                          <i class="fa fa-check text-primary me-3"></i
+                          >Professional Staff
+                        </h5>
+                      </div>
+                      <div class="col-sm-6">
+                        <h5 class="mb-3">
+                          <i class="fa fa-check text-primary me-3"></i>24/7
+                          Support
+                        </h5>
+                        <h5 class="mb-0">
+                          <i class="fa fa-check text-primary me-3"></i>Fair Prices
+                        </h5>
+                      </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
