--- a/404.html
+++ b/404.html
@@ -361,7 +361,7 @@
                     ><i class="bi bi-arrow-right text-primary me-2"></i
                     >Cource</a
                   >
-                  <a class="text-light mb-2" href=""
+                  <a class="text-light mb-2" href="about.html" 
                     ><i class="bi bi-arrow-right text-primary me-2"></i>About
                     Us</a
                   >
