--- a/about.html
+++ b/about.html
@@ -65,63 +65,130 @@
   </div>
 
   <div class="container-fluid position-relative p-0">
-    <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-      <a href class="navbar-brand p-0">
-        <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>Startup</h1>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-        <span class="fa fa-bars"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto py-0">
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Home</a>
-            <div class="dropdown-menu m-0">
-              <a href="index.html" class="dropdown-item">Home 1</a>
-              <a href="index-2.html" class="dropdown-item">Home 2</a>
-            </div>
+    <nav
+    class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
+  >
+    <a href="index.html" class="navbar-brand p-0">
+      <img
+        src="img/A3_images/Logo_transparent.png"
+        alt=""
+        width="130"
+        height="50"
+    /></a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarCollapse"
+    >
+      <span class="fa fa-bars"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="navbar-nav ms-auto py-0">
+        <a href="index.html" class="nav-item nav-link">Home</a>
+        <div class="nav-item dropdown">
+          <a
+            href="Course.html"
+            class="nav-link dropdown-toggle "
+            data-bs-toggle="dropdown"
+            >Cources</a
+          >
+          <div class="dropdown-menu m-0">
+            <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
+            <a href="cma-india.html" class="dropdown-item "
+              >CMA India</a
+            >
+            <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
+            <a href="404.html" class="dropdown-item">GST VAT</a>
+            <a href="404.html" class="dropdown-item">ACCA IFRS</a>
           </div>
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">About</a>
-            <div class="dropdown-menu m-0">
-              <a href="about-1.html" class="dropdown-item active">About 1</a>
-              <a href="about-2.html" class="dropdown-item">About 2</a>
-            </div>
-          </div>
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Service</a>
-            <div class="dropdown-menu m-0">
-              <a href="service-1.html" class="dropdown-item">Service 1</a>
-              <a href="service-2.html" class="dropdown-item">Service 2</a>
-              <a href="service-3.html" class="dropdown-item">Service 3</a>
-              <a href="service-detail.html" class="dropdown-item">Service Detail</a>
-            </div>
-          </div>
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-            <div class="dropdown-menu m-0">
-              <a href="price-1.html" class="dropdown-item">Price Page 1</a>
-              <a href="price-2.html" class="dropdown-item">Price Page 2</a>
-              <a href="project.html" class="dropdown-item">Project Page</a>
-              <a href="project-detail.html" class="dropdown-item">Project Detail</a>
-              <a href="blog.html" class="dropdown-item">Blog Page</a>
-              <a href="blog-detail.html" class="dropdown-item">Blog Detail</a>
-              <a href="faq.html" class="dropdown-item">FAQs Page</a>
-              <a href="team.html" class="dropdown-item">Team Page</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              <a href="404.html" class="dropdown-item">404 Page</a>
-            </div>
-          </div>
-          <a href="elements.html" class="nav-item nav-link">Elements</a>
-          <a href="contact.html" class="nav-item nav-link">Contact</a>
         </div>
-        <butaton type="button" class="btn text-primary ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i
-            class="fa fa-search"></i></butaton>
-        <a href="https://htmlcodex.com/startup-company-website-template" class="btn btn-primary py-2 px-3 ms-3">Purchase
-          Now</a>
+
+        <!-- <div class="nav-item dropdown">
+          <a
+            href="#"
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            >Cources</a
+          >
+          <ul class="dropdown-menu m-0">
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle active">CMA USA </a>
+              <ul class="submenu dropdown-menu">
+                <li>
+                  <a class="dropdown-item active" href="cma-usa.html"
+                    >About CMA USA</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Course Benefits </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    Certification/Course Fees
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle">CMA INDIAN </a>
+              <ul class="submenu dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#">About CMA INDIAN</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Course Benefits </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    Certification/Course Fees
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle">EA </a>
+              <ul class="submenu dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#">About EA </a>
+                </li>
+                <li><a class="dropdown-item" href="#">Course Benefits </a></li>
+                <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
+              </ul>
+            </li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle">GST VAT </a>
+              <ul class="submenu dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#">About GST VAT</a>
+                </li>
+                <li><a class="dropdown-item" href="#">Course Benefits </a></li>
+                <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
+              </ul>
+            </li>
+            <li class="dropdown-submenu">
+              <a class="dropdown-item dropdown-toggle">ACCA IFRS </a>
+              <ul class="submenu dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="#">About ACCA IFRS</a>
+                </li>
+                <li><a class="dropdown-item" href="#">Course Benefits </a></li>
+                <li><a class="dropdown-item" href="#"> Certification/Course Fees </a></li>
+              </ul>
+            </li>
+          </ul>
+        </div> -->
+        <a href="about.html" class="nav-item nav-link active">About Us </a>
+        <a href="404.html" class="nav-item nav-link">FAQ Page</a>
+        <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
       </div>
-    </nav>
-    <div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px">
+
+      <a href="contact.html" class="btn btn-primary py-2 px-3 ms-3"
+        >Contact Now</a
+      >
+    </div>
+  </nav>
+<div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px">
       <div class="row py-5">
         <div class="col-12 pt-lg-5 mt-lg-5 text-center">
           <h1 class="display-4 text-white animated zoomIn mb-3">About Us</h1>
