--- a/cma-india.html
+++ b/cma-india.html
@@ -203,7 +203,7 @@
                 </li>
               </ul>
             </div> -->
-            <a href="about-1.html" class="nav-item nav-link">About Us </a>
+            <a href="about.html" class="nav-item nav-link">About Us </a>
             <a href="404.html" class="nav-item nav-link">FAQ Page</a>
             <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
