--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
             </div>
-            <a href="404.html " class="nav-item nav-link">About Us </a>
+            <a href="about.html" class="nav-item nav-link">About Us </a>
             <a href="404.html" class="nav-item nav-link">FAQ Page</a>
             <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
