--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Prospire - The Accounting and Finance Institution</title>
+    <title>The Accounting and Finance Institution</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Prospire Institution: " name="keywords" />
     <meta content="Your Partner in Accounting Success" name="description" />
